{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 72,
  "lineage": "a8f1f2b2-99a8-ce20-aeb5-78ed463dc2cd",
  "resources": [
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:network-acl/acl-02911e91a6a076a72",
            "default_network_acl_id": "acl-02911e91a6a076a72",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02911e91a6a076a72",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397681234",
            "subnet_ids": [
              "subnet-0b67e8c7135a28506",
              "subnet-0b9d3988941f03fab",
              "subnet-0bc2a5fc208e06504"
            ],
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:route-table/rtb-03cd40ab5c65e2de0",
            "default_route_table_id": "rtb-03cd40ab5c65e2de0",
            "id": "rtb-03cd40ab5c65e2de0",
            "owner_id": "767397681234",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:security-group/sg-03b8d72a4f91503cf",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03b8d72a4f91503cf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767397681234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0825aed8e5fa53bb1",
            "arn": "arn:aws:ec2:eu-north-1:767397681234:elastic-ip/eipalloc-0825aed8e5fa53bb1",
            "domain": "vpc",
            "id": "eipalloc-0825aed8e5fa53bb1",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-21-8-37.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.8.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06dcf9e5856faa0fd",
            "arn": "arn:aws:ec2:eu-north-1:767397681234:elastic-ip/eipalloc-06dcf9e5856faa0fd",
            "domain": "vpc",
            "id": "eipalloc-06dcf9e5856faa0fd",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-48-113-231.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.113.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:internet-gateway/igw-0311ef4a012533c3a",
            "id": "igw-0311ef4a012533c3a",
            "owner_id": "767397681234",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0825aed8e5fa53bb1",
            "association_id": "eipassoc-0b7de40d624c97314",
            "connectivity_type": "public",
            "id": "nat-0ad4541a8b465cb72",
            "network_interface_id": "eni-0cc5727c1d2756c25",
            "private_ip": "10.0.1.85",
            "public_ip": "51.21.8.37",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b9d3988941f03fab",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06dcf9e5856faa0fd",
            "association_id": "eipassoc-000a402acb7c59db5",
            "connectivity_type": "public",
            "id": "nat-0ad04346d621173dc",
            "network_interface_id": "eni-0bff2c70f08da8ea9",
            "private_ip": "10.0.2.158",
            "public_ip": "13.48.113.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bc2a5fc208e06504",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c8c19279488226691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad4541a8b465cb72",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c8c1927948822669",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05970f0fe2cd3e6461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad04346d621173dc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05970f0fe2cd3e646",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0311ef4a012533c3a",
            "id": "r-rtb-0dd49b8a570fa27c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd49b8a570fa27c5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:route-table/rtb-0c8c1927948822669",
            "id": "rtb-0c8c1927948822669",
            "owner_id": "767397681234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:route-table/rtb-05970f0fe2cd3e646",
            "id": "rtb-05970f0fe2cd3e646",
            "owner_id": "767397681234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:route-table/rtb-0dd49b8a570fa27c5",
            "id": "rtb-0dd49b8a570fa27c5",
            "owner_id": "767397681234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ac3d1f93abd7a2",
            "route_table_id": "rtb-0c8c1927948822669",
            "subnet_id": "subnet-0b67e8c7135a28506"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0187ca850abc284af",
            "route_table_id": "rtb-05970f0fe2cd3e646",
            "subnet_id": "subnet-0398606db241f3e8c"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047d118c9d27333fa",
            "route_table_id": "rtb-0dd49b8a570fa27c5",
            "subnet_id": "subnet-0b9d3988941f03fab"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad046d2f1632e1d8",
            "route_table_id": "rtb-0dd49b8a570fa27c5",
            "subnet_id": "subnet-0bc2a5fc208e06504"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:subnet/subnet-0b67e8c7135a28506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b67e8c7135a28506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397681234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:subnet/subnet-0398606db241f3e8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0398606db241f3e8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397681234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:subnet/subnet-0b9d3988941f03fab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9d3988941f03fab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397681234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:subnet/subnet-0bc2a5fc208e06504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc2a5fc208e06504",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397681234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            },
            "vpc_id": "vpc-01e882ee22958295d"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:767397681234:vpc/vpc-01e882ee22958295d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02911e91a6a076a72",
            "default_route_table_id": "rtb-03cd40ab5c65e2de0",
            "default_security_group_id": "sg-03b8d72a4f91503cf",
            "dhcp_options_id": "dopt-0b15a619ce3147606",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e882ee22958295d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cd40ab5c65e2de0",
            "owner_id": "767397681234",
            "tags": {
              "Name": "Udemy Demo VPC"
            },
            "tags_all": {
              "Name": "Udemy Demo VPC"
            }
          }
        }
      ]
    }
  ]
}